// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Magento2IntegrationDetail/> render() should render the page for a deactivated integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/magento2"
          >
            Magento 2
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          magento.gorgi.us
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p>
          All your Magento 2 customers have been imported. You can now see their info in the sidebar.
           
          <Link
            to="/app/customers"
          >
            Review your customers.
          </Link>
        </p>
        <Connect(Magento2OneClickIntegrationForm)
          integration={
            Immutable.Map {
              "id": 1,
              "name": "magento.gorgi.us",
              "meta": Immutable.Map {
                "import_state": Immutable.Map {
                  "is_over": true,
                },
              },
              "deactivated_datetime": "2018-01-01T18:52:17",
            }
          }
          isSubmitting={false}
          isUpdate={true}
          redirectUri="gorgias.io"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<Magento2IntegrationDetail/> render() should render the page for an integration being created with the name of another existing integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/magento2"
          >
            Magento 2
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Add integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div>
          <p>
            Let's connect your store to Gorgias. We'll import your Magento 2 customers in Gorgias, along with their order information. This way, when they contact you, you'll be able to see their Magento 2 information next to tickets.
          </p>
          <Alert
            closeAriaLabel="Close"
            color="warning"
            fade={true}
            isOpen={true}
            tag="div"
            transition={
              Object {
                "appear": true,
                "baseClass": "fade",
                "baseClassActive": "show",
                "enter": true,
                "exit": true,
                "in": true,
                "mountOnEnter": false,
                "onEnter": [Function],
                "onEntered": [Function],
                "onEntering": [Function],
                "onExit": [Function],
                "onExited": [Function],
                "onExiting": [Function],
                "tag": "div",
                "timeout": 150,
                "unmountOnExit": true,
              }
            }
          >
            To add a Magento 2 integration to Gorgias, you will need to have installed the
             
            <a
              href="https://marketplace.magento.com/gorgias-module-magento-connect.html"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gorgias plugin
            </a>
             
            on your store first. Please follow instructions
             
            <a
              href="https://docs.gorgias.com/ecommerce-integrations/magento-2"
              rel="noopener noreferrer"
              target="_blank"
            >
              here
            </a>
             
            for more details about how to do that.
          </Alert>
        </div>
        <span>
          How do you want to add this integration?
        </span>
        <div
          className="selection-button-group"
        >
          <Magento2ModeSelectionButton
            icon="storefront"
            onClick={[Function]}
            selected={true}
            text="One-click installation"
          />
          <Magento2ModeSelectionButton
            icon="build"
            onClick={[Function]}
            selected={false}
            text="Manual installation"
          />
        </div>
        <Connect(Magento2OneClickIntegrationForm)
          integration={Immutable.Map {}}
          isSubmitting={false}
          isUpdate={false}
          redirectUri="gorgias.io"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<Magento2IntegrationDetail/> render() should render the page for an integration for which the sync is not over 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/magento2"
          >
            Magento 2
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          magento.gorgi.us
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Alert
          className="mb-4"
          closeAriaLabel="Close"
          color="info"
          fade={true}
          isOpen={true}
          tag="div"
          transition={
            Object {
              "appear": true,
              "baseClass": "fade",
              "baseClassActive": "show",
              "enter": true,
              "exit": true,
              "in": true,
              "mountOnEnter": false,
              "onEnter": [Function],
              "onEntered": [Function],
              "onEntering": [Function],
              "onExit": [Function],
              "onExited": [Function],
              "onExiting": [Function],
              "tag": "div",
              "timeout": 150,
              "unmountOnExit": true,
            }
          }
        >
          <p>
            <b
              className="alert-heading"
            >
              <i
                className="material-icons md-spin mr-2"
              >
                autorenew
              </i>
              Importing your Magento 2 customers
            </b>
          </p>
          <p>
            We're currently importing all your Magento 2 customers. This way, you'll see customer & orders info next to tickets. We'll notify you via email when the import is done. We typically sync 3,000 customers an hour.
             
            <Link
              to="/app/customers"
            >
              Review imported customers.
            </Link>
          </p>
        </Alert>
        <Connect(Magento2OneClickIntegrationForm)
          integration={
            Immutable.Map {
              "id": 1,
              "name": "magento.gorgi.us",
              "meta": Immutable.Map {
                "import_state": Immutable.Map {
                  "is_over": false,
                },
              },
            }
          }
          isSubmitting={false}
          isUpdate={true}
          redirectUri="gorgias.io"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<Magento2IntegrationDetail/> render() should render the page to create a new integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/magento2"
          >
            Magento 2
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Add integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div>
          <p>
            Let's connect your store to Gorgias. We'll import your Magento 2 customers in Gorgias, along with their order information. This way, when they contact you, you'll be able to see their Magento 2 information next to tickets.
          </p>
          <Alert
            closeAriaLabel="Close"
            color="warning"
            fade={true}
            isOpen={true}
            tag="div"
            transition={
              Object {
                "appear": true,
                "baseClass": "fade",
                "baseClassActive": "show",
                "enter": true,
                "exit": true,
                "in": true,
                "mountOnEnter": false,
                "onEnter": [Function],
                "onEntered": [Function],
                "onEntering": [Function],
                "onExit": [Function],
                "onExited": [Function],
                "onExiting": [Function],
                "tag": "div",
                "timeout": 150,
                "unmountOnExit": true,
              }
            }
          >
            To add a Magento 2 integration to Gorgias, you will need to have installed the
             
            <a
              href="https://marketplace.magento.com/gorgias-module-magento-connect.html"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gorgias plugin
            </a>
             
            on your store first. Please follow instructions
             
            <a
              href="https://docs.gorgias.com/ecommerce-integrations/magento-2"
              rel="noopener noreferrer"
              target="_blank"
            >
              here
            </a>
             
            for more details about how to do that.
          </Alert>
        </div>
        <span>
          How do you want to add this integration?
        </span>
        <div
          className="selection-button-group"
        >
          <Magento2ModeSelectionButton
            icon="storefront"
            onClick={[Function]}
            selected={true}
            text="One-click installation"
          />
          <Magento2ModeSelectionButton
            icon="build"
            onClick={[Function]}
            selected={false}
            text="Manual installation"
          />
        </div>
        <Connect(Magento2OneClickIntegrationForm)
          integration={Immutable.Map {}}
          isSubmitting={false}
          isUpdate={false}
          redirectUri="gorgias.io"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<Magento2IntegrationDetail/> render() should render the page to update an existing integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/magento2"
          >
            Magento 2
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          magento.gorgi.us
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <p>
          All your Magento 2 customers have been imported. You can now see their info in the sidebar.
           
          <Link
            to="/app/customers"
          >
            Review your customers.
          </Link>
        </p>
        <Connect(Magento2OneClickIntegrationForm)
          integration={
            Immutable.Map {
              "id": 1,
              "name": "magento.gorgi.us",
              "meta": Immutable.Map {
                "import_state": Immutable.Map {
                  "is_over": true,
                },
              },
            }
          }
          isSubmitting={false}
          isUpdate={true}
          redirectUri="gorgias.io"
        />
      </Col>
    </Row>
  </Container>
</div>
`;
